--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask
-pandas
-requests
-scikit-learn
-psycopg2
-smtplib 8.8.4
-email
-plotly
+Flask==2.3.3
+pandas==2.1.1
+requests==2.31.0
+scikit-learn==1.3.1
+psycopg2==2.9.7
+smtplib==8.8.4
+email==6.0.0
+plotly==5.17.0
