--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask
-pandas
-requests
-scikit-learn
-plotly
-gunicorn
-google-generativeai
-googletrans==3.1.0a0
-numpy
-psycopg2-binary
-Werkzeug
+Flask==3.0.3
+pandas==2.2.3
+requests==2.32.3
+scikit-learn==1.5.2
+plotly==5.24.1
+gunicorn==23.0.0
+google-generativeai==0.8.3
+googletrans==4.0.0-rc1
+httpx>=0.27.3
+numpy==2.1.2
+psycopg2-binary==2.9.10
+Werkzeug==3.0.4
