--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ scikit-learn==1.5.2
 plotly==5.24.1
 gunicorn==23.0.0
 google-generativeai==0.8.3
-googletrans==4.0.0-rc1
+googletrans
 httpx>=0.27.3
 numpy==2.1.2
 psycopg2-binary==2.9.10
